# quarterly-clock

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  quarterly.m4v
.github/workflows/: publish-to-ghcr.yaml
d3/: bundle.js  index.html  main.js  model.test.js  package-lock.json  package.json  rollup.config.js
d3/modules/: model.mjs
d3/spec/: model.spec.mjs
parcel-d3/: package-lock.json  package.json
parcel-d3/src/: dates.js  dates.test.js  draw.js  index.html  main.css  main.js  model.js  model.test.js
preview/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chrome  Dockerfile.debian.chrome  Dockerfile.fly  README.md  fly.toml  rust-toolchain.toml  start.sh
preview/.github/workflows/: publish-to-ghcr.yaml
preview/src/: grab.rs  lib.rs  main.rs
src/: container.js  container.test.js  draw.js  index.html  main.css  main.js  model.js  model.test.js  sentry.js
src/draw/: about.js  about.test.js  draw.js  draw.test.js  quarter.js  quarter.test.js  remainder.js  remainder.test.js  root.js  root.test.js  standard.js  standard.test.js  test_setup.js  year.js  year.test.js
src/draw/__snapshots__/: about.test.js.snap  draw.test.js.snap  quarter.test.js.snap  remainder.test.js.snap  root.test.js.snap  year.test.js.snap
