[package]
name = "preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.11"
headless_chrome = { version= "0.9", default-features = false }
failure = "0.1"
image = "0.23"
actix-web = "3.3"
sentry = "0.23.0"
sentry-actix = "0.23.0"
sentry-log = "0.23.0"
dotenv = "0.15.0"
