[package]
name = "preview"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0"
image = "0.25"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tower = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
bytes = "1.10"
